tests/negative/optimizer/slice.orng
fn main() -> Int {
    let x: [4]Int
    let y = []x
    let z = y[2..1]
    z[0]
}